<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Mo Apps logo"
            android:src="@drawable/ic_mo_apps"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/enter_login_and_pass"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"/>

            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"/>
        </LinearLayout>

        <RelativeLayout
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/login_email"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login_email"
                android:drawableStart="@drawable/ic_login_email"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="false"/>

            <ImageView
                android:id="@+id/icDelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="false"
                android:clickable="true"
                android:paddingTop="4dp"
                android:src="@drawable/ic_delete"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/LoginField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_pwd"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login_pass"
                android:drawableStart="@drawable/ic_login_pass"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="false"/>

            <ImageView
                android:id="@+id/icDelPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="false"
                android:clickable="true"
                android:paddingTop="4dp"
                android:src="@drawable/ic_delete"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_sign_in"
            android:text="@string/btn_sign_in"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:text="@string/btn_information"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>